--- a/arch/x86/configs/amur_pci_x86_64_defconfig
+++ b/arch/x86/configs/amur_pci_x86_64_defconfig
@@ -50,7 +50,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-dwc3-pci"
+CONFIG_LOCALVERSION="-dwc3-host"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_BZIP2=y
@@ -5204,8 +5204,8 @@ CONFIG_USB_MUSB_TUSB6010=m
 # CONFIG_USB_MUSB_UX500 is not set
 CONFIG_MUSB_PIO_ONLY=y
 CONFIG_USB_DWC3=m
-# CONFIG_USB_DWC3_HOST is not set
-CONFIG_USB_DWC3_GADGET=y
+CONFIG_USB_DWC3_HOST=y
+# CONFIG_USB_DWC3_GADGET is not set
 # CONFIG_USB_DWC3_DUAL_ROLE is not set
 
 #
